[gd_scene load_steps=4 format=3 uid="uid://bovj1fh32psmp"]

[ext_resource type="PackedScene" uid="uid://c4crw1xwvc5ki" path="res://component/sound_button/sound_button.tscn" id="1_afute"]
[ext_resource type="Script" path="res://scene/settings/settings.gd" id="1_ria5c"]
[ext_resource type="PackedScene" uid="uid://1m56yeqje48x" path="res://component/h_audio_slider/h_audio_slider.tscn" id="2_vdnsv"]

[node name="Settings" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = ExtResource("1_ria5c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LargeLabel"
text = "Music Volume"

[node name="MusicSlider" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_vdnsv")]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="ToneLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LargeLabel"
text = "Game Tones Volume
"

[node name="ToneSlider" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_vdnsv")]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="SFXLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LargeLabel"
text = "SFX Volume
"

[node name="SFXSlider" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_vdnsv")]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="AdvancedAudioLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LargeLabel"
text = "Advanced Audio Settings"

[node name="AdvancedAudioDescription" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
text = "Adjust the settings below if you are having issues with audio crackling or popping. The harmonic tones are generated slightly ahead of time, so popping can happen if your device can't keep up. Decreasing the sample rate will reduce audio quality but improve performance. Increasing the buffer size will increase the delay before changes to the audio are heard but will improve performance. These settings only affect generated audio tones, not SFX or music."
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SampleRateLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Sample Rate
"

[node name="SampleRateEntry" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 44100.0
value = 1.0
rounded = true
allow_greater = true
suffix = "Hz"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="BufferSizeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Buffer Size"

[node name="BufferSizeEntry" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.05
max_value = 5.0
step = 0.0
value = 0.05
allow_greater = true
suffix = "s"
custom_arrow_step = 0.1

[node name="BackButton" parent="." instance=ExtResource("1_afute")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ToneSlider" to="." method="_on_tone_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SampleRateEntry" to="." method="_on_sample_rate_entry_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/BufferSizeEntry" to="." method="_on_buffer_size_entry_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
